tests/samples/negative/pointers/invalid_pcast_numeric.ax
module invalid_pcast_numeric;

fn main() -> i32 {
    let ptr: *mut i32 = ptrcast<*mut i32>(1);
    return 0;
}
